--- a/components/ui/history/Values.module.css
+++ b/components/ui/history/Values.module.css
@@ -86,6 +86,9 @@
 /* BELOW 750px */
 /**************************/
 @media (max-width: 47em) {
+  .section-values {
+    padding: 4.8rem 0 9.6rem 0;
+  }
   .card-grid {
     flex-wrap: wrap;
     justify-content: center;
