--- a/components/ui/homepage/BookTable.module.css
+++ b/components/ui/homepage/BookTable.module.css
@@ -123,6 +123,10 @@
   .box-right > h2 {
     font-size: 3rem;
   }
+
+  .section-book-table {
+    padding: 9.6rem 0 4.8rem 0;
+  }
 }
 
 /**************************/
@@ -150,4 +154,7 @@
 /**************************/
 
 @media (max-width: 30em) {
+  .section-book-table {
+    padding: 4.8rem 0;
+  }
 }
