--- a/components/ui/homepage/ImageFeatured.module.css
+++ b/components/ui/homepage/ImageFeatured.module.css
@@ -130,6 +130,9 @@
 /* BELOW 750px */
 /**************************/
 @media (max-width: 47em) {
+  .section-featured {
+    padding: 9.6rem 0 4.8rem 0;
+  }
 }
 
 /**************************/
@@ -137,12 +140,9 @@
 /**************************/
 
 @media (max-width: 30em) {
-  .section-featured {
-    padding: 9.6rem 0;
-  }
   .box-buttons {
     flex-direction: column;
-    margin-top: 2rem;
+    margin-top: 3.6rem;
     gap: 1.4rem;
   }
   .box-buttons > a {
